hard-gists/3163938/run.log
=== Docker Run Log for 3163938 ===
Started at: Mi 29. Okt 13:42:59 CET 2025

[2025-10-29 13:43:00] START: Running container for 3163938
[2025-10-29 13:43:00] SUCCESS: Container 20a1cfd0de2d0aea502020aedf4a7d7ff59a21b4d649d7c0ac899a1c42570ffd started for 3163938
=== Container logs for 3163938 ===
  File "/snippet.py", line 11
    print "Lighting up LED"
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3163938 ===
[2025-10-29 13:43:02] INFO: Container 20a1cfd0de2d0aea502020aedf4a7d7ff59a21b4d649d7c0ac899a1c42570ffd has stopped
